[metadata]
name = ravf
version = 0.0.1
author = Mark Simpson
author_email = author@example.com
description = Raw Astro Video Format - File format designed to store raw frames from a camer in realtime primarily for Occultations 
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

install_requires =
    opencv-python

[options.packages.find]
where = src
