[metadata]
name = ravf
version = 1.0.0
author = ChasinSpin
author_email =
description = Raw Astro Video Format - File format designed to store raw frames from a camera in realtime primarily for Occultations 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ChasinSpin/ravf
project_urls =
    Bug Tracker = https://github.com/ChasinSpin/ravf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

install_requires =
     opencv-python

[options.packages.find]
where = src
